# ChangeLog for sci-physics/lammps
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-physics/lammps/ChangeLog,v 1.100 2015/04/22 07:01:00 jlec Exp $

  22 Apr 2015; Justin Lecher <jlec@gentoo.org> -lammps-20140628.ebuild,
  -lammps-20141030.ebuild, -lammps-20141209.ebuild, -lammps-20150224.ebuild,
  -lammps-20150304.ebuild, -lammps-20150305.ebuild, -lammps-20150306.ebuild,
  -lammps-20150312.ebuild, -lammps-20150314.ebuild, -lammps-20150318.ebuild,
  -lammps-20150325.ebuild, -lammps-20150328.ebuild, -lammps-20150329.ebuild,
  -lammps-20150402.ebuild, -lammps-20150403.ebuild, -lammps-20150406.ebuild,
  -lammps-20150411.ebuild, metadata.xml:
  Drop old

  21 Apr 2015; Pacho Ramos <pacho@gentoo.org> lammps-20150210.ebuild:
  x86 stable wrt bug #544018

*lammps-20150418 (20 Apr 2015)

  20 Apr 2015; Nicolas Bock <nicolasbock@gentoo.org> +lammps-20150418.ebuild:
  sci-physics/lammps: Version bump

*lammps-20150416 (19 Apr 2015)

  19 Apr 2015; Nicolas Bock <nicolasbock@gentoo.org> +lammps-20150416.ebuild:
  sci-physics/lammps: Version bump

  15 Apr 2015; Nicolas Bock <nicolasbock@gentoo.org> -files/chunk.patch:
  sci-physics/lammps: Removing obsolete patch.

  15 Apr 2015; Nicolas Bock <nicolasbock@gentoo.org> -lammps-20150201.ebuild,
  -lammps-20150202.ebuild, -lammps-20150203.ebuild, -lammps-20150206.ebuild,
  -lammps-20150213.ebuild, -lammps-20150216.ebuild, -lammps-20150219.ebuild:
  sci-physics/lammps: Spring cleaning.

*lammps-20150411 (14 Apr 2015)

  14 Apr 2015; Nicolas Bock <nicolasbock@gentoo.org>
  +files/lammps-python3.patch, +lammps-20150411.ebuild:
  Version bump.

*lammps-20150406 (12 Apr 2015)

  12 Apr 2015; Nicolas Bock <nicolasbock@gentoo.org> +lammps-20150406.ebuild:
  sci-physics/lammps: Added new version.

*lammps-20150403 (12 Apr 2015)

  12 Apr 2015; Nicolas Bock <nicolasbock@gentoo.org> +lammps-20150403.ebuild:
  sci-physics/lammps: added new version.

*lammps-20150402 (11 Apr 2015)
