@@ -1,32 +1,26 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 AUX lammps-python3.patch 509 SHA256 85ab3e1d1cc123af8d63400ec1b83f52f50325aa6990ae9f2f032d6753f8553f SHA512 e88b7e036c3ea86c032a7e8dde771073c08ed96c0a3da240a824fd7f424553ef4d5db2ba6c4fcfcb9f0ec4550a073e7370a163165352911ee4f1d64f91094056 WHIRLPOOL bb73c0b001b39266d4586ff7c409789599b8e64785609037b96e6bbcb89ac100fa4171230fc8e6b28017d898b591c8c0188aace223caaaa728477865a2e97699
 AUX python-shebang.patch 393 SHA256 77ffe7208de583b53f0ec4e688d647218135fa0cafbe374b56c6f4ceec3229e1 SHA512 fd4663ac2ce6949e59509ab03a7eda4471e38350440fe6c64c9fe5321941a5951074578148d0da335292a4e19c6c0b13d3e97c174123eb1d9662bbd63247b5e7 WHIRLPOOL bd792c3cfe7bb85b436ba11e2574c6bfd21364566236c89ca7330206f781d474117daa9cf44c9a4ba902349c673aaefeffb84e45b2afc2553359dcf270370370
 DIST lammps-10Feb15.tar.gz 62912048 SHA256 59373e9b5592f7b697a144bbce1fb742726e03536b7bb355dac7a9e013ddf9b8 SHA512 a7804377a23f03f338bdaf443439dffcdc52293b4c45e6369b340a1107510fed0b8a198e3b5afcff2e04e109985b52ee62e7b28276697bae37ac6f783d1ab9f2 WHIRLPOOL 09f29cadf8b072d388abe45ec219341d2a14a6c9cc9e4010a0f7945e930e9984738f7837748d117ab95ca76ce0c8d9160fe88dcec17e8d21b81f385dec8f7005
 DIST lammps-16Apr15.tar.gz 63842472 SHA256 65aecf6f25a055734ef113890a86ecbf7f8478105238c507e5f9bcbeb657bc99 SHA512 95639145db66e76bd27a865849dc0ad15d3920f7ca9f1fb9a426e457376d0c939c57440e89fa6903d1989ca5e5c6c97d8d283928e1dbf33dd94ba88dbb05a252 WHIRLPOOL 422f6814093f22820cfd8fada1d97735c1a8f0388b34e6bad49e361e411b254ea89e6bf7afa8390c0cba1371a6d038fa84cf93583568c5223e42d95210f13515
 DIST lammps-18Apr15.tar.gz 63883297 SHA256 4ce74978da738383a1d808a37481c3c43d4f8f44d919770b3f2cdd4fcf03345b SHA512 be088ec59b7fe495fff3cdfcc5ccb52d2705eec20deb5c8694a215943786652c9dc22a81ba48324707495c3f56c0c347af964d1952ae077c8db02258cf31387a WHIRLPOOL c90403147cc4eda5b4f581cd1bd18bcc8f45a73b1d0e51dcd64c52fc636116c9d57337b89b5753c86e1bbf386f8a2391a9813a6e32154a819f3e35cfc816b5e2
+DIST lammps-28Apr15.tar.gz 63883556 SHA256 6e7c32690cf8bb5a4fb147bab6029cc1d03594ec7b3ea3833e7dc89acc596d8a SHA512 414c786e8666cddd31a3200baedc76974371280dc219636914dd7863f03e32e11f637a9c184af78d8d4da22afe4cf734b6a0eb32c78d6f53ee95d796a3e080c0 WHIRLPOOL c57a91f9d5e977d26cdb2076b5bbd2f3b5791396c23b5326f16cc609b9646e80c602a492b312b4e5f78d1d638c4a6b66e9a49b1ced02274ad7202821a2884975
 EBUILD lammps-20150210.ebuild 4947 SHA256 d3bf0c40480bb9d230678c50d64d40e41cb627a03ac7c258920a9e42c3f883cd SHA512 189bcfce8a7ace252f2bb749ee651ab77f3c2572a453752b6925b96a31383d4e08c7d95092635e28b31f88601ad3eba2e33c9316d33928255e408fce6925869e WHIRLPOOL af857a14e98226c6450386d175e8c1a100bc5aa477659460bf12a74557f72ef825d1149a66083c166d4d0ae14cf0080feba8fcaebd6e762abe81bb08e0732364
 EBUILD lammps-20150416.ebuild 6832 SHA256 4bf509ae365810d708bc92620aa04e8a9e4010a178b1c042b80a65d0085e4f4f SHA512 b8371ef0a764c872ecb74395fbe950fb323dd8390e2a9b783a40445581620755bc4255d60b21297153a3bf554b09ac16fa29cc73830346822c061b328dc88c62 WHIRLPOOL 3e25dec55dfb53b823f9a6ffec66d21d4eb3ecb6ab7e4f396914c80bcb1f6c668dad8cbb3e8c7e4a653aa4622269e4a3d1ea1f972b722c80410897d06b56e8cb
 EBUILD lammps-20150418.ebuild 6832 SHA256 665ac583ecbc456e5e7e1da98e326b4a73d4c3d16f5b03e0de7a3d9694d06f3e SHA512 e1a10023a8719d745f798ae607b379824fcb13df1d49ea6ff5b133288cebc3586bf1a10364ce9a7c0fb34f4b8f410ad3095d0539b13c9896334b072d6ec7577e WHIRLPOOL 9ce0e97de6eefebce313cd8da8ab3890299112fca379d243b68ee94520b5a20efd0ebdc06a59f208965320c156231b4814d13e21be41d41e2f3ac0ab2dddd7bd
-MISC ChangeLog 17311 SHA256 e6c00bbdca854115431e291c7092090b4ff52cc91bd25d5b8da1169ab4065e4a SHA512 9b99b7626f60d68eb45615b90bb572831c5c9afebd4bc38c7ace820088130567be73763022a89f095f73229ca557c8410bad6405d768e4af15a714e8494026e4 WHIRLPOOL 11151261c6721fe1a928530209f43f9558a52dc83a60674c12ce1ffa0b12357e3179bdeded9f2ed2005d53927dcb67c50970aa428664695ea9cded75d7178814
+EBUILD lammps-20150428.ebuild 6832 SHA256 65b7165907191e4ac8369d4aa8463f8833233061d0dd1c81be6a62334183122d SHA512 3ce45944204b70f5ff9096b3a9ae242c4fb547cdd49b6f08cc3d69c8d67e883b7389c67a5551bc1d5c1aebe74dc44366d274d84cb93889e106df355a6c4a96bd WHIRLPOOL 63c572cc29d3170248c955b5c26457851f4b1abf42ceb539188d552a3a9a32846114f7599bf52fbbe924b9872eb6ad8928562548b9476bbe9997601687539005
+MISC ChangeLog 17464 SHA256 9299a686bf0000bf93428c3936483a30dde539d42bb985a27a16a0ce91f88c6c SHA512 61d8589a521773ff060fbc881eff3cfebff33e7276fc62c3af62e7d383d1e3c8b6da14d07ed16871feea753b465c17b838a4cf5c342fff12d90abebd7f539264 WHIRLPOOL 73be4ee6f8c653a7ab143968fa2ca370a640edb2225d3df311c38be9e862cfe16e23398290d99235fa30bbb50bc7304019ff2b4350b4df70e6307a2a9df38949
 MISC metadata.xml 1113 SHA256 7fffeb01fabbbd836129f6765f5f2e6ca92d86eab5f713fae5ce248697e3ff6f SHA512 a7d91b1d8856bc987b7baac7a540d9cf62e82912b7b88e760a57b7c3b342a078f6e901712876b5fa5da262aecb11fcd1786ee671993a3ae2ec55386a9058be9b WHIRLPOOL 8bf5f029ab656e2b7006d5a4458df54df3731922624f81cd6fa84f718a96d1014f261558c5bf92dec176ebd7c884b3538d24d68264f01683ab798eb3aa8cd7b4
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.1
+Version: GnuPG v2
 
-iQJ8BAEBCgBmBQJVN0ctXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQyQ0JDQjFGMzBDQ0UxMjFGNENDNDgxMDdC
-OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVirbowP/0vf6xOlhQzeRJykWYTwul6f
-QtkeOrBIeoyL9h6vTkyD98Z7bIgPfrp3wAT5+TNu53A0pvQR7+/F1SxJajwnSRuW
-H5hy7c2RwdYF3swDcvXjOvhxV+wIzbHXw4bMAZkWUPpqJFmedwc50I3mnyqmCPKk
-D1a1vtOMKh7E2RA1GY80oDGdadFa548/oHuQ8VQ5YaMXfvnlN4fklcjLfSTghRcU
-+TwxSxUabS0e7ArrdbSAEnQdlHjizh1CRwyxjZnvmmbsJoc67MVt1N3RnpcC4co8
-oI3YGOKqP0RVIdQSSsI5gQ6cO/BVSStejcqK2X6WIqCJDl/58PSciSrtV7VDOZSW
-y24xOLEFX4jqMV+VWF3vg8ypolRxpg9JZjjv9piuoKLwRuAcBQ5X5a9kCCKfQ4/3
-sGHs3MDIMea5n/7m7kIgqmtNJ+3YnSUbquYpw1FzYg6N6i7ucnditi+G0MDowu/s
-egizH2GkV6RwBJlB5eEJmkAzYMDtgWcEmMzTI1VMP7LFI6x3W/Sh7SAENRv+R0yl
-FBwqFusDM5YWwMBVKs9z+Ipt8V99OgV0og9P9VzGG0q2YZlME/mqXCmYTqP/lakb
-PIf/FLv1BG+u+kkFU+caTFePBZ0c0fNvfAlTl1yu3AOxqiiscK1pPz7dWtnK/lDI
-MubfCQ3K+bD8W9GJEpEj
-=5T00
+iQEcBAEBCAAGBQJVQiSsAAoJEF1ww0n44d9NMH0H/j8cqJ+QtPEXge6AnhcGmyYt
+jr1nC/T9qIU7EQvaiOzh3hZ4rRWYS1mbHJ3w0kE7a3qDlxSb7OIcd50lrtYjkYsk
+J8E3ctQCHKYDj7LyEaEul7MUfqpd1FFIt4y53IFu0L9UGZpGhw+/I7P/aGbLvGTA
+BQ//vFccIxOCrgcYuYPj4sonYf4XY3F65AFvfo4wRryvwOu2I4M2j0VIIiqOMlH6
+i5Au8VzgWQy/i56P5/zjCE+t4gEFyaHe47GrOaa6aT3s52nXEslaqregJumcpD8J
+vnb3M2KbVqaHWxkWptwGTNinttffDtJay21ddbAIarXhBOrmdX48EbyACiBTKTo=
+=ei21
 -----END PGP SIGNATURE-----
